41. Nicer 'Agua' look for MDI/window/dock widget buttons.
42. Added option to hide MDI/window/dock widget button icons until mouse-over.
43. Added 'Whats This?' text to most config items.
44. Correctly theme menu separators with titles.
45. Draw titles in KMenu's the same as menu separators with titles - bold, and
    with no icon.
46. Fade ends of tab widget base - used in document mode tabs.
47. Added option to draw Air-like background rings.
    Note: to use an SVG instead of the hard-coded air-like rings, edit
          ~/.config/qtcurve/stylerc (or /etc/qtcurvestylerc) and add:

          bgndImage=file
          bgndImage.file=/path/to/svg/file.svg
          bgndImage.width=120
          bgndImage.height=160

48. Added option to add a 'glow' to progressbars.
49. Fix QToolBox background when using background image and/or gradients.
50. Unset non-editable combobox popup menu palette when unpolishing the widget.
51. To disable background gradient, or image,  for a particular app, edit
    ~/.config/qtcurve/stylerc  and add:
        noBgndGradientApps=inkscape,gimp
        noBgndImageApps=inkscape,gimp

    ...using 'gtk' (e.g. noBgndImageApps=gtk) will disable for all Gtk apps.
52. Added a option to manually re-order the buttons of Gtk dialogs to match
    KDE style. Note: This is experimental, and may produce unexpected results!
53. Disable parentless-dialog fix for Kate (not required anyway), as this causes
    disappearing pointers when using embedded konsole!
54. Alter the size of a QtoolBarExtension if its width/height is greater than
    its parent - as occurs on Amarok's thin toolbars.
55. Add option to control whether tabs that are in toolbars are drawn as tabs, or
    as per side bar button settings.
56. Googleearth crashes when using file dialogs, if linked to KDE4. So, for googleearth
    the usage of KDE4 dialogs is removed. To remove for other apps, edit
    ~/.config/qtcurve/stylerc  and add:
        useQtFileDialogApps=googleearth-bin