@@ -339,10 +339,10 @@ typedef gchar ** Strings;
 #define QTC_ETCH_RADIO_BOTTOM_ALPHA  1.0
 // #endif
 
-#define QTC_RINGS_INNER_ALPHA qtcRingInnerAlpha //(IMG_PLAIN_RINGS==opts.bgndImage.type ? 0.25 :  0.125)
-#define QTC_RINGS_OUTER_ALPHA qtcRingOuterAlpha //0.5
-#define QTC_RINGS_WIDTH       450
-#define QTC_RINGS_HEIGHT      360
+#define QTC_RINGS_INNER_ALPHA(T) qtcRingAlpha[IMG_PLAIN_RINGS==T ? 0 : 1] //(IMG_PLAIN_RINGS==opts.bgndImage.type ? 0.25 :  0.125)
+#define QTC_RINGS_OUTER_ALPHA    qtcRingAlpha[2] //0.5
+#define QTC_RINGS_WIDTH          450
+#define QTC_RINGS_HEIGHT         360
 
 #define QTC_CUSTOM_BGND (!(IS_FLAT(opts.bgndAppearance)) || IMG_NONE!=opts.bgndImage.type)
 
@@ -1017,8 +1017,8 @@ typedef struct
 #else
     Gradient         *customGradient[QTC_NUM_CUSTOM_GRAD];
 #endif
-    QtCImage         bgndImage;
-
+    QtCImage         bgndImage,
+                     menuBgndImage;
 #if !defined __cplusplus || (defined QT_VERSION && (QT_VERSION >= 0x040000))
     /* NOTE: If add any more settings here, need to alter copyOpts/freeOpts/defaultSettings in config_file.c */
     Strings          noBgndGradientApps,
@@ -1749,8 +1749,7 @@ static double getRadius(const Options *opts, int w, int h, EWidget widget, ERadi
     return 0;
 }
 
-static double qtcRingInnerAlpha=0.125;
-static double qtcRingOuterAlpha=0.5;
+static double qtcRingAlpha[3]={0.125, 0.125, 0.5};
 
 static void calcRingAlphas(Options *opts, const color *bgnd)
 {
@@ -1767,8 +1766,9 @@ static void calcRingAlphas(Options *opts, const color *bgnd)
            s=0,
            v=0;
     rgbToHsv(r, g, b, &h, &s, &v);
-    qtcRingInnerAlpha=v*(IMG_PLAIN_RINGS==opts->bgndImage.type ? 0.26 : 0.14);
-    qtcRingOuterAlpha=v*0.55;
+    qtcRingAlpha[0]=v*0.26;
+    qtcRingAlpha[1]=v*0.14;
+    qtcRingAlpha[2]=v*0.55;
 }
 
 #endif
