@@ -689,6 +689,7 @@ QtCurveConfig::QtCurveConfig(QWidget *parent)
     insertGradTypeEntries(menuBgndGrad);
     insertLvLinesEntries(lvLines);
     insertImageEntries(bgndImage);
+    insertImageEntries(menuBgndImage);
     insertGlowEntries(glowProgress);
 
     highlightFactor->setRange(MIN_HIGHLIGHT_FACTOR, MAX_HIGHLIGHT_FACTOR);
@@ -825,6 +826,7 @@ QtCurveConfig::QtCurveConfig(QWidget *parent)
     connect(sliderFill, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
     connect(bgndAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
     connect(bgndImage, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
+    connect(menuBgndImage, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
     connect(dwtAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
     connect(dwtBtnAsPerTitleBar, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(dwtColAsPerTitleBar, SIGNAL(toggled(bool)), SLOT(updateChanged()));
@@ -2108,6 +2110,7 @@ void QtCurveConfig::setOptions(Options &opts)
     opts.sliderFill=(EAppearance)sliderFill->currentIndex();
     opts.bgndAppearance=(EAppearance)bgndAppearance->currentIndex();
     opts.bgndImage.type=(EImageType)bgndImage->currentIndex();
+    opts.menuBgndImage.type=(EImageType)menuBgndImage->currentIndex();
     opts.dwtAppearance=(EAppearance)dwtAppearance->currentIndex();
     opts.xbar=xbar->isChecked();
     opts.crColor=crColor->isChecked();
@@ -2310,6 +2313,7 @@ void QtCurveConfig::setWidgetOptions(const Options &opts)
     bgndAppearance->setCurrentIndex(opts.bgndAppearance);
     // TODO: Add UI to specify file? Needs thought as to how to export, etc?
     bgndImage->setCurrentIndex(IMG_FILE==opts.bgndImage.type ? IMG_BORDERED_RINGS : opts.bgndImage.type);
+    menuBgndImage->setCurrentIndex(IMG_FILE==opts.menuBgndImage.type ? IMG_BORDERED_RINGS : opts.menuBgndImage.type);
     dwtAppearance->setCurrentIndex(opts.dwtAppearance);
     dwtBtnAsPerTitleBar->setChecked(opts.dwtSettings&QTC_DWT_BUTTONS_AS_PER_TITLEBAR);
     dwtColAsPerTitleBar->setChecked(opts.dwtSettings&QTC_DWT_COLOR_AS_PER_TITLEBAR);
@@ -2522,6 +2526,7 @@ bool QtCurveConfig::settingsChanged(const Options &opts)
          sliderFill->currentIndex()!=opts.sliderFill ||
          bgndAppearance->currentIndex()!=opts.bgndAppearance ||
          bgndImage->currentIndex()!=opts.bgndImage.type ||
+         menuBgndImage->currentIndex()!=opts.menuBgndImage.type ||
          dwtAppearance->currentIndex()!=opts.dwtAppearance ||
          xbar->isChecked()!=opts.xbar ||
          crColor->isChecked()!=opts.crColor ||
