@@ -154,8 +154,8 @@ class QtCurveStyle : public QWindowsStyle
                             const QColor *custom, bool doBorder, EWidget w, bool useCache, ERound realRound) const;
     void drawGlow(QPainter *p, const QRect &r, EWidget w) const;
     void drawEtch(QPainter *p, const QRect &r,  const QWidget *widget, EWidget w, bool raised=false) const;
-    void drawBgndRing(QPainter &painter, int x, int y, int size, int size2) const;
-    void drawWindowBackground(QWidget *widget) const;
+    void drawBgndRing(QPainter &painter, int x, int y, int size, int size2, bool isWindow) const;
+    void drawBackground(QWidget *widget, bool isWindow=true) const;
     QPainterPath buildPath(const QRectF &r, EWidget w, int round, double radius) const;
     QPainterPath buildPath(const QRect &r, EWidget w, int round, double radius) const;
     void buildSplitPath(const QRect &r, EWidget w, int round, double radius, QPainterPath &tl, QPainterPath &br) const;
